# Arabic-Diacritizer

./: README.md  deploy_hf_demo.sh  requirements.txt
arabic_diacritizer/: exporter.py  metrics.py
arabic_diacritizer/data/: __init__.py  data_manager.py  dataset.py  tokenizer.py
arabic_diacritizer/data/preprocessing/: __init__.py  preprocessor.py  segmenter.py
arabic_diacritizer/modeling/: __init__.py  losses.py  model_factory.py  modeling_orchestrator.py  optimizers.py
arabic_diacritizer/modeling/architectures/: bigru.py  bilstm.py  cnn_lstm.py  transformer_encoder.py
arabic_diacritizer/training/: builder.py  callbacks.py  loggers.py  training_pipeline.py
common/: pyproject.toml
common/src/arabic_diacritizer_common/: __init__.py  cleaners.py  constants.py  postprocessor.py  tokenizer.py
configs/: base.yaml  cnn_lstm.yaml  gru.yaml  lstm.yaml  transformer.yaml
demo_app/: README.md  app.py  requirements.txt
docs/: benchmarks.md  inference.md  training.md
inference/: pyproject.toml
inference/src/arabic_diacritizer_inference/: diacritizer.py
inference/src/diacritizer/: __init__.py  diacritizer.py  exceptions.py  hub_manager.py  predictor.py
scripts/: run.py  utils.py
scripts/commands/: evaluate.py  export.py  preprocess.py  train.py
